add forgot password ui

--- a/Halos/app/src/main/res/values/strings.xml
+++ b/Halos/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Halos</string>
     <string name="title_activity_welcome">WelcomeActivity</string>
     <string name="title_activity_halos_map">Map</string>
+    <string name="title_activity_retrieve_password">RetrievePasswordActivity</string>
 </resources>
