Changed Entire Store code-Updated for recycleview and viewpager

--- a/Halos/app/src/main/res/values/strings.xml
+++ b/Halos/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="Store">Store</string>
     <string name="Logout">Logout</string>
     <string name="NameLabel">User Name Here</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
