refactor Location to Landmark, improve settings

--- a/Halos/app/src/main/res/values/strings.xml
+++ b/Halos/app/src/main/res/values/strings.xml
@@ -15,6 +15,45 @@
     <string name="stop_updates">Stop updates</string>
     <string name="location_updated_message">Location updated</string>
 
+    <string-array name="category_drop_down">
+        <item>Accounting</item>
+        <item>Airport</item>
+        <item>Amusement Park</item>
+        <item>Aquarium</item>
+        <item>Art Gallery</item>
+        <item>ATM</item>
+        <item>Bakery</item>
+        <item>Bank</item>
+        <item>Bar</item>
+        <item>Beauty Salon</item>
+        <item>Bicycle Store</item>
+        <item>Book Store</item>
+        <item>Bowling Alley</item>
+        <item>Bus Station</item>
+        <item>Cafe</item>
+        <item>Campground</item>
+        <item>Car Dealer</item>
+        <item>Car Rental</item>
+        <item>Car Repair</item>
+        <item>Car Wash</item>
+        <item>Casino</item>
+        <item>Cemetery</item>
+        <item>Church</item>
+        <item>City Hall</item>
+        <item>Clothing Store</item>
+        <item>Convenience Store</item>
+        <item>Courthouse</item>
+        <item>Dentist</item>
+        <item>Department Store</item>
+        <item>Restaurant</item>
+        <!-- TODO: CONTINUE https://developers.google.com/places/web-service/supported_types -->
+    </string-array>
+
+    <string-array name="rankby_drop_down">
+        <item>Prominence</item>
+        <item>Distance</item>
+    </string-array>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
