add waypoints rest api, settings update

--- a/Halos/app/src/main/res/values/strings.xml
+++ b/Halos/app/src/main/res/values/strings.xml
@@ -27,6 +27,18 @@
         <item>Distance</item>
     </string-array>
 
+    <string-array name="opennow_drop_down">
+        <item>Yes</item>
+        <item>No</item>
+    </string-array>
+
+    <string-array name="mode_drop_down">
+        <item>Drive</item>
+        <item>Walk</item>
+    </string-array>
+
+
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_tour_map">Map</string>
