--- a/Halos/app/src/main/res/values/strings.xml
+++ b/Halos/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_tour_map">Map</string>
+    <string name="title_activity_create_tour">CreateTourActivity</string>
 </resources>
